increased notes input text to 16px to prevent zoom in on mobile

--- a/client/src/JobPage.css
+++ b/client/src/JobPage.css
@@ -154,6 +154,7 @@
   padding: 0.5rem;
   flex: 1;
   border-radius: 0.75rem 0 0 0.75rem; /* rounded-l-xl */
+  font-size: 16px;
 }
 
 .modal-button {
